--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,5 @@ version: '${version}'
 main: me.retamrovec.advancedreport.AdvancedReport
 api-version: 1.19
 authors: [ RETAMROVEC ]
+commands:
+  report:
