--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,22 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
+var mainClass = 'AdvancedReport'
 group = 'me.retamrovec'
 version = '1.0-SNAPSHOT'
+application.mainClass = group + '.advancedreport.' + mainClass
+
+shadowJar {
+    archiveFileName = mainClass + '-' + version + '.jar'
+    minimize()
+}
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven {
         name = "papermc-repo"
         url = "https://repo.papermc.io/repository/maven-public/"
@@ -18,7 +28,15 @@ repositories {
 }
 
 dependencies {
-    compileOnly "io.papermc.paper:paper-api:1.19.3-R0.1-SNAPSHOT"
+    compileOnly 'io.papermc.paper:paper-api:1.19.3-R0.1-SNAPSHOT'
+    implementation 'net.dv8tion:JDA:5.0.0-beta.5'
+}
+
+compileJava {
+    options.encoding = 'UTF-8'
+    options.incremental = true
+
+    sourceCompatibility = "17"
 }
 
 def targetJavaVersion = 17
