--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 var mainClass = 'AdvancedReport'
 group = 'me.retamrovec'
-version = '1.0-SNAPSHOT'
+version = '1.1-PRODUCTION'
 application.mainClass = group + '.advancedreport.' + mainClass
 
 shadowJar {
