--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ repositories {
 }
 
 dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.26'
     compileOnly 'io.papermc.paper:paper-api:1.19.3-R0.1-SNAPSHOT'
     implementation 'net.dv8tion:JDA:5.0.0-beta.5'
 }
