--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,5 @@
+bStats: true
+server-name: "Example"
 discord-bot:
   enabled: false
   token: ""
@@ -6,7 +8,7 @@ discord-bot:
   # there must be channel id (you need developer mode for this)
   log-channel: ""
   log-message:
-    title: "New report (%player_name%)"
+    title: "New report (%player_name%) (Server-%server_name%)"
     color:
       r: 88
       g: 125
